@@ -7,7 +7,6 @@ import it.polimi.ingsw.gc31.client_server.queue.clientQueue.*;
 import it.polimi.ingsw.gc31.client_server.queue.serverQueue.JoinGameObj;
 import it.polimi.ingsw.gc31.client_server.queue.serverQueue.ServerQueueObject;
 import it.polimi.ingsw.gc31.exceptions.NoGamesException;
-import it.polimi.ingsw.gc31.exceptions.PlayerNicknameAlreadyExistsException;
 
 import java.rmi.RemoteException;
 import java.rmi.server.UnicastRemoteObject;
@@ -156,8 +155,6 @@ public class Controller extends UnicastRemoteObject implements IController {
      *
      * @param client   the client to connect.
      * @param username the username of the client.
-     * @throws PlayerNicknameAlreadyExistsException if the username is already in
-     *                                              use.
      */
     public boolean connect(VirtualClient client, String username, Integer token)
             throws RemoteException {
@@ -192,21 +189,21 @@ public class Controller extends UnicastRemoteObject implements IController {
      * client ha specificato che vuole connettersi in risposta a
      * WantsReconnectObj.java
      * Deve innescare gli update dei listener e mandare la risposta al client
-     * (pseudocodice sotto)
+     * (pseudocode sotto)
      *
      * @param username is the username of the client
      * @param token    is the token of the client
      * @param esito    is true if the client wants to reconnect, false otherwise
      */
     public void rejoin(String username, int token, boolean esito) {
-        VirtualClient client = newConnections.get(token); // FIXME non so se è il modo correto di prendere il virtual
-        // client
-        // giusto (non i ricordo come e quando si swappa)
+        VirtualClient client = newConnections.get(token); // FIXME non so se è il modo corretto di prendere il virtual
+                                                          // client
+                                                          // giusto (non i ricordo come e quando si swappa)
         if (esito) {
             try {
                 // TODO Chri deve aggiungere il metodo di rejoin qua
                 client.sendCommand(new ReJoinedObj(true)); // mandare questo è importante perché la ui fa cose in
-                // risposta a questo update
+                                                           // risposta a questo update
             } catch (RemoteException e) {
                 e.printStackTrace();
             }
@@ -251,12 +248,12 @@ public class Controller extends UnicastRemoteObject implements IController {
                 gameControlList.add(new GameController(username, client, maxNumPlayer,
                         gameControlList.size()));
                 client.setGameID(gameControlList.size() - 1);
-            } catch (RemoteException e) {
+            } catch (RemoteException ignored) {
 
             }
             tempClients.remove(username);
             sendUpdateToClient(client, new GameCreatedObj(gameControlList.size() - 1));
-            client.setGameController(gameControlList.get(gameControlList.size() - 1));
+            client.setGameController(gameControlList.getLast());
             ServerLog.controllerWrite("A new game has been created with id: " + gameControlList.size());
         }
     }
@@ -294,7 +291,7 @@ public class Controller extends UnicastRemoteObject implements IController {
      */
     public void quitGame(String username, VirtualClient client) throws RemoteException {
         tempClients.put(username, client);
-        // se il gioco era costituito da una sola persona va eliminato il gamecontroller
+        // se il gioco era costituito da una sola persona va eliminato il gameController
         // corrispondente
         sendUpdateToClient(client, new QuitFromGameRObj(username));
     }
@@ -346,14 +343,14 @@ public class Controller extends UnicastRemoteObject implements IController {
     // Heartbeat resources
     // FIXME spostare in cima attributi e metodi
     protected ConcurrentHashMap<VirtualClient, Long> clientsHeartBeat;
-    private ScheduledExecutorService scheduler;
+    private final ScheduledExecutorService scheduler;
 
     /**
      * This method creates a task that execute every 10 seconds the checkHeartBeats
      * method
      */
     private void startHeartBeatCheck() {
-        scheduler.scheduleAtFixedRate(() -> checkHeartBeats(), 0, 10, TimeUnit.SECONDS);
+        scheduler.scheduleAtFixedRate(this::checkHeartBeats, 0, 10, TimeUnit.SECONDS);
     }
 
     /**
@@ -389,14 +386,12 @@ public class Controller extends UnicastRemoteObject implements IController {
                     }
                 }
 
-                //FIXME si può usare disconnected get(token) per ottenere subito il gameID
                 //If the client was not found in tempClients => it is in a clientList of a GameController (it was
                 //in a game). The for searches the client in all the gameController.clientList, if it is found the
                 //disconnectPlayer method of the gameController is invoked with also the disconnect method of the Controller
                 if (!found) {
                     for (GameController gc : gameControlList) {
-                        // FIXME
-                        synchronized (gc.clientList) {
+                        synchronized (gc.clientListLock) {
                             for (String u : gc.clientList.keySet()) {
                                 if ((gc.clientList.get(u)).equals(client)) {
                                     gc.disconnectPlayer(u);
@@ -414,7 +409,7 @@ public class Controller extends UnicastRemoteObject implements IController {
                 }
                 // ^ Implementato sopra ^
                 // gc.disconnectPlayer(...)
-                // gc.getid()
+                // gc.getId()
                 // disconnect(username, id, token )
 
             }
@@ -443,24 +438,6 @@ public class Controller extends UnicastRemoteObject implements IController {
         // System.out.println("HeartBeat ricevuto");
     }
 
-    // /**
-    // * This method is invoked if a check on the heart beat is met.
-    // * The method searches for the gameController of the client that needs to be
-    // * disconnected,
-    // * if the gameController and the correct couple username/VirtualClient is
-    // found
-    // * the method disconnectPlayer is invoked.
-    // *
-    // * @param username is the username of the client to be disconnected
-    // */
-    // private void disconnectFromGame(String username) {
-    // for (int i = 0; i < gameControlList.size(); i++) {
-    // for (String u : gameControlList.get(i).clientList.keySet())
-    // if (u.equals(username))
-    // gameControlList.get(i).disconnectPlayer(username);
-    // }
-    // }
-
     public void disconnect(String username, int idGame, int token) {
         disconnected.put(token, idGame);
         ServerLog.controllerWrite("Client disconnesso per timeout" + username);
@@ -470,7 +447,7 @@ public class Controller extends UnicastRemoteObject implements IController {
         new Thread(() -> {
             try {
                 client.sendCommand(clientQueueObject);
-            } catch (RemoteException e) {
+            } catch (RemoteException ignore) {
 
             }
         }).start();
